modified:   css/style.css 	modified:   index.html

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,28 @@
+header,
+content {
+  padding: 50px 0;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+p {
+  margin: 0;
+  padding: 0;
+}
+
+.footer {
+  padding-top: 100px;
+  padding-bottom: 10px;
+}
+
+header {
+  padding-top: 10px;
+  margin-bottom: 100px;
+}
+
 body {
   background: #210e09;
   padding: 30px 0;
@@ -34,9 +59,59 @@ a,
   transition: 0.4s ease;
 }
 
-.shield-btn:hover {
+.btn-hover:hover {
   background: #fff;
   color: #d5621d;
   border: 3px solid #fff;
   cursor: pointer;
+}
+
+.kitchen__menu_item {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 40px;
+}
+
+.kitchen__menu_item__header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.kitchen__menu_item__annotation a {
+  font-size: 14px;
+  border: 3px solid #d5621d;
+  font-weight: 400;
+  padding: 4px 10px 5px 10px;
+  border-radius: 3px;
+  transition: 0.4s ease;
+}
+
+.kitchen__menu_item img {
+  max-width: 110px;
+  max-height: 110px;
+  margin-right: 15px;
+  border-radius: 3px;
+}
+
+.kitchen__menu_item__annotation p {
+  font-size: 14px;
+  color: #d5621d;
+  width: 350px;
+}
+
+.footer .line {
+  width: 100%;
+  height: 2px;
+  background: #584a46;
+  margin-bottom: 20px;
+}
+
+.footer__info {
+  color: #584a46;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-size: 14px;
 }
